--- a/webapp/web/islr/style.css
+++ b/webapp/web/islr/style.css
@@ -121,6 +121,8 @@ main {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    z-index: 2; /* Set a higher z-index to keep it above particles and video */
+    pointer-events: auto; /* Ensure it responds to pointer events */
 }
 
 /* Headings */
@@ -144,6 +146,10 @@ main {
     height: auto;
     aspect-ratio: 1 / 1;
     display: block;
+}
+.input_video {
+    object-fit: cover; /* Ensure video covers the screen */
+    z-index: 0; /* Behind the particle effect */
 }
 
 .output_canvas {
@@ -417,4 +423,13 @@ input[type="text"]::placeholder {
     color: var(--main-color); /* Text color for options */
     background-color: var(--bg-color); /* Background color for options */
     padding: 5px; /* Space around text */
+}
+
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: 1;
+    transition: opacity 0.5s ease-out;
+    z-index: 1; /* Ensure it's above the video */
 }
